src/test/ui/unboxed-closures/unboxed-closure-region.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/unboxed-closure-region.rs:8:12
   |
LL |     let _f = {
   |         -- borrow later stored here
LL |         let x = 0;
LL |         || x
   |         -- ^ borrowed value does not live long enough
   |         |
   |         value captured here
LL |     };
   |     - `x` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
